--- a/pure-tlc.cabal
+++ b/pure-tlc.cabal
@@ -1,7 +1,6 @@
 name:                pure-tlc
-version:             0.7.0.0
-synopsis:
-homepage:            github.com/grumply/pure-tlc
+version:             0.8.0.0
+homepage:            purehs.org/doc/pure-tlc
 license:             BSD3
 license-file:        LICENSE
 author:              Sean Mackenzie
@@ -10,9 +9,13 @@ category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 
+source-repository head
+  type: git
+  location: https://github.com/grumply/pure-tlc.git
+
 library
   build-depends:
-    base >= 4.8 && < 5
+    base
    
   exposed-modules:
     Pure.TLC
